adguard/adguard-slave/adguard-slave-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-slave
  namespace: adguard
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    matchLabels:
      app: adguard-slave
  template:
    metadata:
      labels:
        app: adguard-slave
    spec:
      affinity:
        podAntiAffinity: 
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 100  
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app 
                  operator: In
                  values:
                  - adguard
              topologyKey: kubernetes.io/hostname
      containers:
      - name: adguard-home
        image: adguard/adguardhome:v0.107.48
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 53
          name: dnstcp
          protocol: TCP
        - containerPort: 3000
          name: http-initial
          protocol: TCP
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: adguard-slave-data
          mountPath: /opt/adguardhome/work
        - name: adguard-slave-conf
          mountPath: /opt/adguardhome/conf
      - name: adguard-sync
        image: ghcr.io/linuxserver/adguardhome-sync:v0.6.9@sha256:0e9c9ea0fd80b16ed64db9cb6d0542acfd3998637c21e7f7d7825a4fce80bfb8
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: adguard-sync-conf
          mountPath: /config
      volumes:
      - emptyDir: {}
        name: adguard-slave-data
      - emptyDir: {}
        name: adguard-slave-conf
      - name: adguard-sync-conf
        secret:
          secretName: adguard-sync-secret
      - name: adguard-slave-secret
        secret:
          secretName: adguard-slave-secret
