adguard/adguard-slave/adguard-slave-http-service.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-slave-http
  namespace: adguard
  labels:
    app: adguard-slave
spec:
  selector:
    app: adguard-slave
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
