adguard/adguard-slave/adguard-slave-service.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-slave
  namespace: adguard
spec:
  selector:
    app: adguard-slave
  ports:
  - protocol: UDP
    port: 53
    targetPort: 53
    name: dns
  - protocol: TCP
    port: 53
    targetPort: 53
    name: dnstcp
  type: LoadBalancer
  loadBalancerIP: 192.168.77.55
